# sliding_extrema

./: Cargo.toml  README.md
src/: lib.rs
