[package]
name = "sliding_extrema"
version = "0.1.2"
authors = ["Anders Musikka <anders@andersmusikka.se>"]


description = "Queue data structure with support for an O(1) extrema function over contents (for example, to obtain min and max over a sliding window of samples)"

readme = "README.md"


keywords = ["queue"]

categories = ["data-structures"]

license = "MIT/Apache-2.0"


[dev-dependencies]
rand="0.4.2"

